# wallpaper-helper

./: .gitignore  Cargo.toml
src/: main.rs  wallpaper_manager.rs
